feat: update claude skills for inc-build analysis and fix